--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
+    "react-tabs": "^6.1.0",
     "sort-by": "^1.2.0",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
